--- a/views/home.html
+++ b/views/home.html
@@ -56,7 +56,12 @@
             <button type="submit" id="button">Find My Vacation</button>
         </div>
         </form>
-
     </main>
+    
+    <footer id="url">
+        <p>GitHub Repository: 
+            <a href="https://github.com/liliann19/midterm-vacation">https://github.com/liliann19/midterm-vacation</a>
+        </p>
+    </footer>
 </body>
 </html>
